; ModuleID = '/home/carl/AnghaBench/redis/src/modules/extr_hellotype.c_HelloTypeDigest.c'
source_filename = "/home/carl/AnghaBench/redis/src/modules/extr_hellotype.c_HelloTypeDigest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.HelloTypeObject = type { %struct.HelloTypeNode* }
%struct.HelloTypeNode = type { %struct.HelloTypeNode*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @HelloTypeDigest(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.HelloTypeObject*, align 8
  %6 = alloca %struct.HelloTypeNode*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.HelloTypeObject*
  store %struct.HelloTypeObject* %8, %struct.HelloTypeObject** %5, align 8
  %9 = load %struct.HelloTypeObject*, %struct.HelloTypeObject** %5, align 8
  %10 = getelementptr inbounds %struct.HelloTypeObject, %struct.HelloTypeObject* %9, i32 0, i32 0
  %11 = load %struct.HelloTypeNode*, %struct.HelloTypeNode** %10, align 8
  store %struct.HelloTypeNode* %11, %struct.HelloTypeNode** %6, align 8
  br label %12

12:                                               ; preds = %15, %2
  %13 = load %struct.HelloTypeNode*, %struct.HelloTypeNode** %6, align 8
  %14 = icmp ne %struct.HelloTypeNode* %13, null
  br i1 %14, label %15, label %24

15:                                               ; preds = %12
  %16 = load i32*, i32** %3, align 8
  %17 = load %struct.HelloTypeNode*, %struct.HelloTypeNode** %6, align 8
  %18 = getelementptr inbounds %struct.HelloTypeNode, %struct.HelloTypeNode* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @RedisModule_DigestAddLongLong(i32* %16, i32 %19)
  %21 = load %struct.HelloTypeNode*, %struct.HelloTypeNode** %6, align 8
  %22 = getelementptr inbounds %struct.HelloTypeNode, %struct.HelloTypeNode* %21, i32 0, i32 0
  %23 = load %struct.HelloTypeNode*, %struct.HelloTypeNode** %22, align 8
  store %struct.HelloTypeNode* %23, %struct.HelloTypeNode** %6, align 8
  br label %12

24:                                               ; preds = %12
  %25 = load i32*, i32** %3, align 8
  %26 = call i32 @RedisModule_DigestEndSequence(i32* %25)
  ret void
}

declare dso_local i32 @RedisModule_DigestAddLongLong(i32*, i32) #1

declare dso_local i32 @RedisModule_DigestEndSequence(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
